# auto-deploy-tool

./: .flake8  .pre-commit-config.yaml  .pylintrc  app.py  main.py  pyproject.toml  readme.md  requirements.txt
backend_api/: Dockerfile  docker-compose.yml  pyproject.toml
backend_api/api/: grpc_windows_service.py  main.py  responses.py  server.py
backend_api/api/protos/: windows_service.proto  windows_service_pb2_grpc.py
backend_api/api/router/: services.py
documents/: initial-model.drawio  ~$initial-model.drawio.dtmp
gateway/: docker-compose.yml
manager/: app.py
manager/modules/command_line/: __init__.py  cli_file.py  cli_windows_service.py  messages.py
manager/modules/file_manager/: file.py  folder.py  util.py
manager/modules/windows_service/: messages.py  wsm.py
src/models/: __init__.py  windows_services.py
src/repositories/: __init__.py  windows_service.py
tests/: __init__.py  conftest.py  test_file_manager.py  test_folder_manager.py  test_util_file_manager.py  test_windows_service.py
windows_manager/: .gitignore  pyproject.toml
windows_manager/services/: main.py  server.py  windows_services_model.py  windows_services_repository.py  windows_services_service.py
windows_manager/services/protos/: windows_service_pb2.py
